Remove large training CSV and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -114,4 +114,4 @@ local.properties
 # iOS
 ios/Pods/
 ios/Flutter/Flutter.framework
-ios/Flutter/Flutter.podspec
+ios/Flutter/Flutter.podspecbackend/Smart_Logistics_Backend/data/training_data_1M_rows.csv
